# fedit

./: .gitignore  .swp  CMakeLists.txt  LICENSE  Makefile  NOTES  README.md  TODO  copytest.c  test.c  test.txt
src/: appendbuffer.c  commands.c  commands.h  config.h  delete.c  editor.c  editor.h  error.c  error.h  errorhandling.c  fedit.c  fedit.h  file.c  file.h  git.h  highlight.c  highlight.h  highlighting.c  highlighting.h  io.c  rows.c  rows.h  signal.c  signal.h  signalhandler.c  signalhandler.h  terminal.c  terminal.h  terminal_io.c  terminal_io.h  terminalmode.c  variables.c  variables.h  vim_delete.c  vim_delete.h
